# DIPO-Backend

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
fastapi_app/: app.py  middleware.py  schemas.py
fastapi_app/training_evaluation/: classificator.py  models.py  splitter.py
