[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "Backend for the DIPO browser extension"
authors = ["Guido Bergman <gbergman@fi.uba.ar>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.18.3"
transformers = "^4.40.1"
numpy = "^1.26.4"
more-itertools = "^10.3.0"
torch = {version = "^2.3.1+cpu", source = "pytorch_cpu"}
cryptography = "^43.0.0"
spacy = "^3.7.5"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
black = "^22.8.0"
pytest-cov = "^3.0.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
