[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "Backend for the DIPO browser extension"
authors = ["Guido Bergman <gbergman@fi.uba.ar>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.18.3"
transformers = "^4.40.1"
torch = "^2.3.0"
numpy = "^1.26.4"
more-itertools = "^10.3.0"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
